Adjust fixed element position and text alignment
Changed the bottom position of a fixed element and updated text alignment from center to start.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h6 {
   visibility: hidden;
   opacity: 0;
   right: 15px;
-  bottom: 15px;
+  bottom: 45px;
   z-index: 996;
   background: #0563bb;
   width: 40px;
@@ -1460,7 +1460,7 @@ html.dark-theme #theme-toggle-icon {
   font-weight: 700;
   font-size: 18px;
   padding: 16px;
-  text-align: center;
+  text-align: start;
   position: relative;
   flex-shrink: 0;
 }
